Fixing step 3 spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -295,6 +295,9 @@ hr {
   font-weight: 500;
 }
 @media (min-width: 320px) and (max-width: 600px) {
+  /* html {
+    background-image: ;
+  } */
   .container {
     background-color: red;
     place-content: center;
@@ -353,5 +356,8 @@ hr {
   .step-toggle-button {
     position: absolute;
     bottom: 0;
+  }
+  .add-ons-text {
+    padding: 0.5rem;
   }
 }
